// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c5 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c5.hidden {
  visibility: hidden;
}

.c6 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c7 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c8 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c7 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c7:first-of-type {
    margin-right: 1.5%;
  }

  .c7:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <article
        className="c3"
      >
        <div>
          <div>
            <div
              className="c4"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div
          className="group-3 hidden c5"
        >
          <h2
            className="c6"
          >
            Sponsored
          </h2>
          <div
            className="c7"
          />
          <div
            className="c7"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-bottom: 20px;
}

.c5 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c5.hidden {
  visibility: hidden;
}

.c6 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c7 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c8 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c5 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c7 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c7:first-of-type {
    margin-right: 1.5%;
  }

  .c7:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <article
        className="c3"
      >
        <div>
          <div>
            <div
              className="c4"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div
          className="group-3 hidden c5"
        >
          <h2
            className="c6"
          >
            Sponsored
          </h2>
          <div
            className="c7"
          />
          <div
            className="c7"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c5 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c5.hidden {
  visibility: hidden;
}

.c6 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c7 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c8 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c7 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c7:first-of-type {
    margin-right: 1.5%;
  }

  .c7:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <article
        className="c3"
      >
        <div>
          <div>
            <div
              className="c4"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div
          className="group-3 hidden c5"
        >
          <h2
            className="c6"
          >
            Sponsored
          </h2>
          <div
            className="c7"
          />
          <div
            className="c7"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c5 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c5.hidden {
  visibility: hidden;
}

.c6 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c7 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c8 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c3 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c4 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c7 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c7:first-of-type {
    margin-right: 1.5%;
  }

  .c7:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Head />
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      />
      <article
        className="c3"
      >
        <div>
          <div>
            <div
              className="c4"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div
          className="group-3 hidden c5"
        >
          <h2
            className="c6"
          >
            Sponsored
          </h2>
          <div
            className="c7"
          />
          <div
            className="c7"
          />
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
